# advent-of-code-2020

./: Cargo.toml  README.md  clippy.sh  mkday.sh  times.sh
day01/: Cargo.toml  README.md  soln.rs
day02/: Cargo.toml  README.md  soln.rs
day03/: Cargo.toml  README.md  soln.rs
day04/: Cargo.toml  README.md  soln.rs
day05/: Cargo.toml  README.md  soln.rs
day06/: Cargo.toml  README.md  fold1.rs  soln.rs
day07/: Cargo.toml  README.md  soln.rs
day08/: Cargo.toml  README.md  soln.rs
day09/: Cargo.toml  README.md  soln.rs
day10/: Cargo.toml  README.md  soln.rs
day11/: Cargo.toml  README.md  soln.rs
day12/: Cargo.toml  README.md  soln.rs
day13/: Cargo.toml  README.md  soln.rs
day14/: Cargo.toml  README.md  soln.rs
day15/: Cargo.toml  README.md  soln.rs
day16/: Cargo.toml  README.md  soln.rs
day17/: Cargo.toml  README.md  soln.rs
day18/: Cargo.toml  README.md  peg.rs  pegexp.rs  soln.rs
day19/: Cargo.toml  README.md  soln.rs
libaoc/: Cargo.toml
libaoc/reparse/: reparse.rs
libaoc/src/: dirns.rs  geom.rs  gridbox.rs  into_chars.rs  lib.rs  numberfns.rs  reparse.rs
template/: Cargo.toml  README.md  gitignore  soln.rs
